2009-01-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Enabled --dry-run and --exclude for 'put' and 'get'.

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* S3/Config.py: guess_mime_type = True (will affect new 
	  installations only).

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre5
	  ---------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-pre5

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Updated paths for the new sync
	  semantics.
	* s3cmd, S3/S3.py: Small fixes to make testsuite happy.

2009-01-21  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Migrated 'sync' local->remote to the new
	  scheme with fetch_{local,remote}_list().
	  Enabled --dry-run for 'sync'.

2009-01-20  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Migrated 'sync' remote->local to the new
	  scheme with fetch_{local,remote}_list().
	  Changed fetch_remote_list() to return dict() compatible
	  with fetch_local_list().
	  Re-implemented --exclude / --include processing.
	* S3/Utils.py: functions for parsing RFC822 dates (for HTTP
	  header responses).
	* S3/Config.py: placeholders for --include.

2009-01-15  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3Uri.py, NEWS: Support for recursive 'put'.

2009-01-13  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated.
	* s3cmd: renamed (fetch_)remote_keys to remote_list and
	  a few other renames for consistency.

2009-01-08  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Some errors during file upload were incorrectly 
	  interpreted as MD5 mismatch. (bug #2384990)
	* S3/ACL.py: Move attributes from class to instance.
	* run-tests.py: Tests for ACL.
	* s3cmd: Minor messages changes.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: New command 'setacl'.
	* S3/S3.py: Implemented set_acl().
	* S3/ACL.py: Fill in <Owner/> tag in ACL XML.
	* NEWS: Info about 'setacl'.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Factored remote_keys generation from cmd_object_get()